# AI_code_reviewer_git

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  hello.cpp  knowledge.md  scratch_review_demo.cpp  test_bug.cpp  vcpkg.json
ai/: llama_client.cpp  llama_client.h  prompt_builder.cpp  prompt_builder.h  review_aggregator.cpp  review_aggregator.h
build_vs/: CMakeCache.txt
commands/: commit_command.cpp  commit_command.h  daemon_command.cpp  daemon_command.h  history_command.cpp  history_command.h  install_command.cpp  install_command.h  push_command.cpp  push_command.h  review_command.cpp  review_command.h  setup_command.cpp  setup_command.h
config/: mygit_config.cpp  mygit_config.h
daemon/: daemon_client.cpp  daemon_client.h  daemon_config.h  daemon_server.cpp  daemon_server.h
database/: async_db_writer.cpp  async_db_writer.h  sqlite_manager.cpp  sqlite_manager.h
decision_engine/: decision_engine.cpp  decision_engine.h
diff_filter/: diff_filter.cpp  diff_filter.h
docs/: architecture_review.md  prompts.md
git/: git_diff.cpp  git_diff.h  git_runner.cpp  git_runner.h  git_status.cpp  git_status.h
include/mygit/: types.h
logger/: review_logger.cpp  review_logger.h
parsers/: json_parser.cpp  json_parser.h
rag/: bpe_tokenizer.cpp  bpe_tokenizer.h  code_parser.cpp  code_parser.h  embedder.cpp  embedder.h  rag_orchestrator.cpp  rag_orchestrator.h  vector_store.cpp  vector_store.h
reports/: report_generator.cpp  report_generator.h
scripts/: export_embedding_model_onnx.py  vcpkg_dependency_submission.py
src/: main.cpp  types.cpp
tests/: test_code_parser.cpp  test_decision_engine.cpp  test_diff_filter.cpp
ui/: terminal_ui.cpp  terminal_ui.h
vcpkg-overlays/onnxruntime/: disable-rdc.patch  fix-concat-link.patch  portfile.cmake
writing/cpp-relevant-again/: final.md  hero.html  medium-ready.md  research.md  table.html
writing/mygit-deep-dive/: draft.md  medium-ready.md
